# libre8

./: meson.build
include/app/: util.hh
include/libre8/: products.hh
include/libre8/core/: device_manager.hh
include/libre8/devices/: base_controller.hh  pro2.hh
include/libre8/util/: crc.hh  fixed_endian.hh  util.hh
src/app/: app.cc
src/libre8/: device_manager_impl.cc  pro2_controller_impl.cc
